
[project]
name = "site_requests"
version = "0.0.1"

dependencies =  [
    "bs4 == 0.0.1",
    "requests >= 2.28.2",
]



#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

#authors = [
#    { name="warise", email="wariken@example.com" },
#]
#description = "A small site requests package"
#readme = "README.md"
#license = {file = "LICENSE"}
#requires-python = ">=3.7"
#classifiers = [
#    "Programming Language :: Python :: 3",
#    "License :: OSI Approved :: MIT License",
#    "Operating System :: OS Independent",
#    "Private :: Do Not Upload",
#]

#[project.urls]
#"Homepage" = "https://github.com/kenno-warise/site-requests"
#"Bug Tracker" = "https://github.com/kenno-warise/site-requests/issues"

